--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
 
     <form action="/semservidor"></form>
     <div class="bloco">
-        <h1>Registre-se</h1>
+        <h1>Cadastre-se</h1>
 
         <section>
             <label for="nome">Nome Completo</label>
