Adicionado um direcionamento para uma pagina de sucesso ao se cadastrar

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <form action="/semservidor">
+    <form action="logado.html">
         <div class="container">
             <div id="caixa" class="bloco">
                 <h1>Cadastre-se</h1>
